--- a/root/init.mt6735.rc
+++ b/root/init.mt6735.rc
@@ -1,12 +1,10 @@
 # MTK platform .rc configure
 
 import init.project.rc
-import /FWUpgradeInit.rc
 import init.xlog.rc
 import init.aee.rc
-#import init.ssd.rc
-#import init.no_ssd.rc
-#import init.ssd_nomuser.rc
+import init.ssd.rc
+import init.modem.rc
 import init.fon.rc
 import init.volte.rc
 import init.epdg.rc
